--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -514,8 +514,7 @@ button:focus {
   outline: none !important;
 }
 
-h1,
-h2 {
+h1 {
   font-family: "Montserrat", sans-serif;
   margin-top: 0;
   margin-bottom: 30px;
@@ -525,8 +524,24 @@ h2 {
   line-height: 100%;
 }
 @media (max-width: 767px) {
-  h1,
+  h1 {
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 120%;
+  }
+}
+
 h2 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 53px;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  h2 {
     margin-bottom: 20px;
     font-size: 22px;
     line-height: 120%;
@@ -1072,13 +1087,6 @@ main {
   text-transform: uppercase;
 }
 
-.series__page-title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 53px;
-}
-
 .series__page-subtitle {
   font-style: normal;
   font-weight: normal;
@@ -1149,5 +1157,87 @@ main {
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
+}
+
+.design .design__swiper {
+  height: 500px;
+}
+.design .swiper-pagination {
+  left: 10px;
+  height: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.design .swiper-pagination-bullets {
+  top: 39% !important;
+}
+.design .swiper-pagination-bullet {
+  width: 0;
+  height: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.design .swiper-pagination-bullet-active {
+  position: relative;
+  color: #00A2CE;
+  height: 60px;
+}
+.design .swiper-pagination-bullet-active:after {
+  position: absolute;
+  content: "";
+  width: 1px;
+  top: 30px;
+  left: 4px;
+  background-color: #00A2CE;
+  height: 100%;
+  z-index: 20;
+}
+.design .swiper-pagination-bullet:last-of-type:after {
+  display: none;
+}
+
+.design__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.design__image {
+  margin-left: 7.5%;
+  width: 42.5%;
+  margin-right: 11.2%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.design__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.design__texts {
+  width: 38.7%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding: 73px 5% 73px 0;
+}
+.design__texts h2 {
+  margin-bottom: 40px;
+}
+.design__texts p {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
 }
 /*# sourceMappingURL=app.css.map*/
