--- a/src/sass/global/common.scss
+++ b/src/sass/global/common.scss
@@ -37,8 +37,7 @@ button {
   }
 }
 
-h1,
-h2 {
+h1 {
   font-family: "Montserrat", sans-serif;
   margin-top: 0;
   margin-bottom: 30px;
@@ -46,6 +45,22 @@ h2 {
   font-weight: 800;
   font-size: 40px;
   line-height: 100%;
+
+  @media (max-width: $mobiles-max) {
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 120%;
+  }
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 53px;
+  margin-top: 0;
+  margin-bottom: 30px;
 
   @media (max-width: $mobiles-max) {
     margin-bottom: 20px;
