добавляет новые блоки

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,3 +13,7 @@
 @import "blocks/buttons.scss";
 @import "blocks/series.scss";
 @import "blocks/design.scss";
+@import "blocks/quote.scss";
+@import "blocks/production.scss";
+@import "blocks/exclusive.scss";
+@import "blocks/form.scss";
