--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -496,7 +496,7 @@ body {
   margin: 0 auto;
   height: 100%;
   color: #2D2D2D;
-  background-color: #E5E5E5;
+  background-color: #ffffff;
 }
 
 img {
@@ -550,10 +550,11 @@ h2 {
 
 h3 {
   font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 130%;
-  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  color: #2D2D2D;
 }
 
 h5 {
@@ -590,7 +591,7 @@ p {
 }
 
 [placeholder] {
-  color: #E5E5E5;
+  color: #F6F6F6;
   opacity: 1;
   -webkit-transition: opacity 0.3s ease;
   -o-transition: opacity 0.3s ease;
@@ -598,28 +599,28 @@ p {
 }
 
 :-webkit-input-placeholder {
-  color: #E5E5E5;
+  color: #F6F6F6;
   opacity: 1;
   -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
 :-moz-placeholder {
-  color: #E5E5E5;
+  color: #F6F6F6;
   opacity: 1;
   -moz-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
 ::-moz-placeholder {
-  color: #E5E5E5;
+  color: #F6F6F6;
   opacity: 1;
   -moz-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
 :-ms-input-placeholder {
-  color: #E5E5E5;
+  color: #F6F6F6;
   opacity: 1;
   -ms-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
@@ -874,6 +875,193 @@ main {
   margin-left: 22px;
 }
 
+.form {
+  background-color: #2D2D2D;
+  min-height: 750px;
+  padding: 130px 0;
+}
+.form h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  color: #ffffff;
+  margin: 0;
+}
+
+.form__request {
+  width: 77%;
+}
+
+.form__fields-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form__fields-wrapper .form__field {
+  width: 49%;
+  margin-right: 2%;
+}
+.form__fields-wrapper:last-of-type {
+  margin-right: 0;
+}
+
+.form__label {
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  left: 15px;
+  opacity: 0.5;
+  line-height: 100%;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+  color: #ffffff;
+}
+.form__label--checkbox {
+  position: static;
+  opacity: 1;
+  line-height: 120%;
+}
+.form__label--checkbox span {
+  padding-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form__label--disabled span {
+  opacity: 0.5;
+}
+.form__label h {
+  opacity: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.form__label:hover h {
+  opacity: 1;
+}
+
+.form__field {
+  position: relative;
+}
+
+.form__input,
+.form__textarea {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #C4C4C4;
+  background-color: #2D2D2D;
+  padding: 18px 15px 0;
+  line-height: 100%;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.form__input:hover,
+.form__textarea:hover {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #F6F6F6;
+}
+.form__input:focus,
+.form__textarea:focus {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #F6F6F6;
+  padding: 26px 15px 8px;
+}
+.form__input--error,
+.form__textarea--error {
+  border: 1px solid #DD3232 !important;
+}
+
+.form__input:focus + label,
+.form__textarea:focus + label,
+.form__input:valid + label,
+.form__textarea:valid + label,
+.form__input--filled + label,
+.form__textarea--filled + label {
+  top: 8px;
+  font-size: 13px;
+}
+.form__input:focus + label h,
+.form__textarea:focus + label h,
+.form__input:valid + label h,
+.form__textarea:valid + label h,
+.form__input--filled + label h,
+.form__textarea--filled + label h {
+  opacity: 1;
+}
+
+.form__input:hover + label h {
+  opacity: 1;
+}
+
+.form__input {
+  width: 100%;
+  height: 52px;
+  margin-bottom: 10px;
+}
+
+.form__textarea {
+  min-height: 150px;
+  max-width: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+  resize: none;
+}
+
+.icon-error {
+  position: absolute;
+  top: 14px;
+  right: 15px;
+  width: 24px;
+  height: 24px;
+  z-index: 1;
+}
+
+.form__error {
+  position: absolute;
+  top: 0;
+  left: calc(100% - 27px);
+  font-size: 9px;
+  line-height: 100%;
+  padding: 4px 6px;
+  background: #FFFFFF;
+  opacity: 0;
+  z-index: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.icon-error:hover + .form__error,
+.form__error:hover {
+  opacity: 0.8;
+  z-index: 1;
+}
+
+.form__length {
+  position: absolute;
+  font-size: 13px;
+  line-height: 100%;
+  opacity: 0.5;
+  bottom: 32px;
+  right: 15px;
+}
+
+.form__agree {
+  text-align: center;
+  font-size: 13px;
+  line-height: 140%;
+  opacity: 0.5;
+  margin: 10px 0 0;
+}
+
 .modal__overlay {
   position: fixed;
   top: 0;
@@ -1008,6 +1196,36 @@ main {
   transition: 0.3s all;
   cursor: pointer;
 }
+.button--round {
+  border-radius: 50%;
+  background-color: #2D2D2D;
+  border-radius: 50%;
+  background-color: #2D2D2D;
+  display: block;
+  width: 120px;
+  min-height: 120px;
+  padding: 48px 0;
+}
+.button--round p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  height: 24px;
+  /* fallback */
+  margin: 0;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  text-transform: uppercase;
+  text-align: center;
+}
 .button .icon {
   stroke: #FFFFFF;
   -webkit-transition: 0.3s all;
@@ -1015,7 +1233,10 @@ main {
   transition: 0.3s all;
 }
 .button:hover {
-  background: transparent;
+  background: #F6F6F6;
+}
+.button:hover p {
+  color: #2D2D2D;
 }
 .button:hover .icon {
   stroke: #00A2CE;
@@ -1239,5 +1460,367 @@ main {
   font-style: normal;
   font-weight: 400;
   line-height: 21px;
+}
+
+.quote {
+  margin: 123px 0;
+}
+.quote h3 {
+  position: relative;
+  padding-top: 185px;
+  padding-left: 24%;
+  padding-right: 16%;
+}
+.quote h3:before {
+  position: absolute;
+  content: "";
+  background-image: url("../img/quote.svg");
+  top: 130px;
+  left: 19%;
+  width: 62px;
+  height: 49px;
+}
+
+.production {
+  background-color: #F6F6F6;
+}
+
+.production__texts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 92px 0 85px;
+}
+.production__texts h2 {
+  width: 49%;
+  margin: 0 1.7% 0 0;
+}
+.production__texts p {
+  width: 49.3%;
+  margin: 0;
+  padding-top: 10px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.production__info {
+  background-image: url("../img/production.jpg");
+  min-height: 750px;
+  background-size: cover;
+  position: relative;
+  background-position: center;
+}
+
+.production__inner {
+  position: relative;
+  min-height: 750px;
+}
+
+.production__info-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  bottom: 45px;
+  width: 100%;
+  padding: 0 25px;
+}
+
+.production__info-item {
+  width: 22%;
+  margin-right: 4%;
+}
+.production__info-item:nth-child(4n) {
+  margin-right: 0;
+}
+.production__info-item span {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.production__info-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+.production__info-inner p {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 96px;
+  line-height: 117px;
+  margin: 0;
+}
+.production__info-inner b {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  margin-left: 20px;
+}
+
+.exclusive {
+  padding-top: 174px;
+  padding-bottom: 201px;
+}
+
+.exclusive__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.exclusive__inner h2 {
+  width: 80%;
+  margin-bottom: 40px;
+}
+
+.exclusive__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.exclusive__text {
+  margin: 0;
+}
+
+.exclusive__text-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 48px;
+}
+
+.exclusive__text-item {
+  width: 49%;
+  margin-right: 2%;
+  margin-bottom: 48px;
+}
+.exclusive__text-item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.exclusive__text-content {
+  margin: 10px 0 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.exclusive__swiper .swiper-slide {
+  width: 100% !important;
+}
+
+.exclusive__info {
+  width: 49%;
+  margin-right: 2%;
+}
+
+.exclusive__picture-wrapper {
+  width: 49%;
+}
+
+.exclusive__item-inner {
+  padding-right: 80px;
+}
+
+.form {
+  background-color: #2D2D2D;
+  min-height: 750px;
+  padding: 130px 0;
+}
+.form h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  color: #ffffff;
+  margin: 0;
+}
+
+.form__request {
+  width: 77%;
+}
+
+.form__fields-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form__fields-wrapper .form__field {
+  width: 49%;
+  margin-right: 2%;
+}
+.form__fields-wrapper:last-of-type {
+  margin-right: 0;
+}
+
+.form__label {
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  left: 15px;
+  opacity: 0.5;
+  line-height: 100%;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+  color: #ffffff;
+}
+.form__label--checkbox {
+  position: static;
+  opacity: 1;
+  line-height: 120%;
+}
+.form__label--checkbox span {
+  padding-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form__label--disabled span {
+  opacity: 0.5;
+}
+.form__label h {
+  opacity: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.form__label:hover h {
+  opacity: 1;
+}
+
+.form__field {
+  position: relative;
+}
+
+.form__input,
+.form__textarea {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #C4C4C4;
+  background-color: #2D2D2D;
+  padding: 18px 15px 0;
+  line-height: 100%;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.form__input:hover,
+.form__textarea:hover {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #F6F6F6;
+}
+.form__input:focus,
+.form__textarea:focus {
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 2px solid #F6F6F6;
+  padding: 26px 15px 8px;
+}
+.form__input--error,
+.form__textarea--error {
+  border: 1px solid #DD3232 !important;
+}
+
+.form__input:focus + label,
+.form__textarea:focus + label,
+.form__input:valid + label,
+.form__textarea:valid + label,
+.form__input--filled + label,
+.form__textarea--filled + label {
+  top: 8px;
+  font-size: 13px;
+}
+.form__input:focus + label h,
+.form__textarea:focus + label h,
+.form__input:valid + label h,
+.form__textarea:valid + label h,
+.form__input--filled + label h,
+.form__textarea--filled + label h {
+  opacity: 1;
+}
+
+.form__input:hover + label h {
+  opacity: 1;
+}
+
+.form__input {
+  width: 100%;
+  height: 52px;
+  margin-bottom: 10px;
+}
+
+.form__textarea {
+  min-height: 150px;
+  max-width: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+  resize: none;
+}
+
+.icon-error {
+  position: absolute;
+  top: 14px;
+  right: 15px;
+  width: 24px;
+  height: 24px;
+  z-index: 1;
+}
+
+.form__error {
+  position: absolute;
+  top: 0;
+  left: calc(100% - 27px);
+  font-size: 9px;
+  line-height: 100%;
+  padding: 4px 6px;
+  background: #FFFFFF;
+  opacity: 0;
+  z-index: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.icon-error:hover + .form__error,
+.form__error:hover {
+  opacity: 0.8;
+  z-index: 1;
+}
+
+.form__length {
+  position: absolute;
+  font-size: 13px;
+  line-height: 100%;
+  opacity: 0.5;
+  bottom: 32px;
+  right: 15px;
+}
+
+.form__agree {
+  text-align: center;
+  font-size: 13px;
+  line-height: 140%;
+  opacity: 0.5;
+  margin: 10px 0 0;
 }
 /*# sourceMappingURL=app.css.map*/
