--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -23,7 +23,8 @@ $transition-settings: 0.3s all;
 $color-black: #2D2D2D;
 $color-light-black: #313030;
 $color-dark-gray: #6a6a6a;
-$color-light-gray: #E5E5E5;
+$background-dark-gray: #E5E5E5;
+$color-light-gray: #F6F6F6;
 $color-white: #FFFFFF;
 $color-blue: #00A2CE;
 $color-green: #488B68;
