добавляет новые компоненты

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -17,3 +17,7 @@
 @import "blocks/production.scss";
 @import "blocks/exclusive.scss";
 @import "blocks/form.scss";
+@import "blocks/partner.scss";
+@import "blocks/manufacturing.scss";
+@import "blocks/faq.scss";
+@import "blocks/more.scss"
