--- a/src/sass/blocks/banners.scss
+++ b/src/sass/blocks/banners.scss
@@ -36,6 +36,14 @@
   }
 }
 
+.banners__image {
+  img {
+    display: block;
+    margin: 0 auto;
+  }
+
+}
+
 .banners__content {
   position: absolute;
   margin: auto;
