--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -27,8 +27,7 @@ $background-dark-gray: #E5E5E5;
 $color-light-gray: #F6F6F6;
 $color-white: #FFFFFF;
 $color-blue: #00A2CE;
-$color-green: #488B68;
-$color-pink: #FF69A1;
+$color-gray: #c4c4c4;
 $color-red: #DD3232;
 
 $font-base-color: $color-black;
