--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -488,6 +488,38 @@ html {
   outline: none !important;
 }
 
+.wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
+}
+.wrapper .header,
+.wrapper .footer {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.wrapper main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
@@ -672,7 +704,7 @@ a {
 
 input,
 textarea {
-  color: #2D2D2D !important;
+  color: #f4f4f4;
   opacity: 1 !important;
 }
 
@@ -890,7 +922,7 @@ main {
 }
 
 .form__request {
-  width: 77%;
+  width: 76.7%;
 }
 
 .form__fields-wrapper {
@@ -899,24 +931,31 @@ main {
   display: flex;
 }
 .form__fields-wrapper .form__field {
-  width: 49%;
-  margin-right: 2%;
+  width: 48.5%;
+  margin-right: 3%;
 }
-.form__fields-wrapper:last-of-type {
+.form__fields-wrapper .form__field:last-of-type {
   margin-right: 0;
+}
+
+.form__subtitle {
+  margin-bottom: 49px;
 }
 
 .form__label {
   cursor: pointer;
   position: absolute;
-  top: 18px;
-  left: 15px;
-  opacity: 0.5;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  top: 25px;
+  left: 0;
   line-height: 100%;
   -webkit-transition: 0.3s all;
   -o-transition: 0.3s all;
   transition: 0.3s all;
-  color: #ffffff;
+  color: #f4f4f4;
 }
 .form__label--checkbox {
   position: static;
@@ -944,6 +983,10 @@ main {
 
 .form__field {
   position: relative;
+  margin-bottom: 28px;
+}
+.form__field:last-of-type {
+  margin-bottom: 30px;
 }
 
 .form__input,
@@ -953,11 +996,14 @@ main {
   border-left: transparent;
   border-bottom: 2px solid #C4C4C4;
   background-color: #2D2D2D;
-  padding: 18px 15px 0;
-  line-height: 100%;
+  padding: 23px 15px 0;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
   -webkit-transition: 0.3s all;
   -o-transition: 0.3s all;
   transition: 0.3s all;
+  color: #ffffff;
 }
 .form__input:hover,
 .form__textarea:hover {
@@ -976,6 +1022,7 @@ main {
 }
 .form__input--error,
 .form__textarea--error {
+  border-radius: 10px;
   border: 1px solid #DD3232 !important;
 }
 
@@ -1008,10 +1055,12 @@ main {
 }
 
 .form__textarea {
-  min-height: 150px;
+  height: 52px;
+  min-height: 52px;
   max-width: 100%;
   width: 100%;
-  margin-bottom: 20px;
+  line-height: 15px;
+  white-space: nowrap;
   resize: none;
 }
 
@@ -1056,10 +1105,40 @@ main {
 
 .form__agree {
   text-align: center;
-  font-size: 13px;
-  line-height: 140%;
-  opacity: 0.5;
-  margin: 10px 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #C4C4C4;
+  text-align: left;
+  margin: 4px 0 0 0;
+}
+
+.form__send {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 56%;
+  margin-top: 72px;
+}
+
+.form__file {
+  width: 160px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+}
+.form__file label {
+  cursor: pointer;
+}
+.form__file input {
+  display: none;
+}
+.form__file span {
+  color: #ffffff;
 }
 
 .modal__overlay {
@@ -1155,6 +1234,11 @@ main {
   display: none;
 }
 
+.banners__image img {
+  display: block;
+  margin: 0 auto;
+}
+
 .banners__content {
   position: absolute;
   margin: auto;
@@ -1195,6 +1279,8 @@ main {
   -o-transition: 0.3s all;
   transition: 0.3s all;
   cursor: pointer;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 .button--round {
   border-radius: 50%;
@@ -1207,9 +1293,7 @@ main {
   padding: 48px 0;
 }
 .button--round p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -1226,6 +1310,30 @@ main {
   text-transform: uppercase;
   text-align: center;
 }
+.button--white {
+  background-color: #ffffff;
+}
+.button--white p {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  height: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #2D2D2D;
+  display: block;
+  margin: 0 auto;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  text-align: center;
+}
+.button--more {
+  border: 1px solid #2D2D2D;
+}
 .button .icon {
   stroke: #FFFFFF;
   -webkit-transition: 0.3s all;
@@ -1233,7 +1341,7 @@ main {
   transition: 0.3s all;
 }
 .button:hover {
-  background: #F6F6F6;
+  background: #c4c4c4;
 }
 .button:hover p {
   color: #2D2D2D;
@@ -1438,6 +1546,7 @@ main {
   margin-right: 11.2%;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  height: 450px;
 }
 .design__image img {
   -o-object-fit: cover;
@@ -1631,10 +1740,20 @@ main {
 
 .exclusive__picture-wrapper {
   width: 49%;
+  height: 450px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .exclusive__item-inner {
   padding-right: 80px;
+}
+
+.exclusive__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .form {
@@ -1652,7 +1771,7 @@ main {
 }
 
 .form__request {
-  width: 77%;
+  width: 76.7%;
 }
 
 .form__fields-wrapper {
@@ -1661,24 +1780,31 @@ main {
   display: flex;
 }
 .form__fields-wrapper .form__field {
-  width: 49%;
-  margin-right: 2%;
+  width: 48.5%;
+  margin-right: 3%;
 }
-.form__fields-wrapper:last-of-type {
+.form__fields-wrapper .form__field:last-of-type {
   margin-right: 0;
+}
+
+.form__subtitle {
+  margin-bottom: 49px;
 }
 
 .form__label {
   cursor: pointer;
   position: absolute;
-  top: 18px;
-  left: 15px;
-  opacity: 0.5;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  top: 25px;
+  left: 0;
   line-height: 100%;
   -webkit-transition: 0.3s all;
   -o-transition: 0.3s all;
   transition: 0.3s all;
-  color: #ffffff;
+  color: #f4f4f4;
 }
 .form__label--checkbox {
   position: static;
@@ -1706,6 +1832,10 @@ main {
 
 .form__field {
   position: relative;
+  margin-bottom: 28px;
+}
+.form__field:last-of-type {
+  margin-bottom: 30px;
 }
 
 .form__input,
@@ -1715,11 +1845,14 @@ main {
   border-left: transparent;
   border-bottom: 2px solid #C4C4C4;
   background-color: #2D2D2D;
-  padding: 18px 15px 0;
-  line-height: 100%;
+  padding: 23px 15px 0;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
   -webkit-transition: 0.3s all;
   -o-transition: 0.3s all;
   transition: 0.3s all;
+  color: #ffffff;
 }
 .form__input:hover,
 .form__textarea:hover {
@@ -1738,6 +1871,7 @@ main {
 }
 .form__input--error,
 .form__textarea--error {
+  border-radius: 10px;
   border: 1px solid #DD3232 !important;
 }
 
@@ -1770,10 +1904,12 @@ main {
 }
 
 .form__textarea {
-  min-height: 150px;
+  height: 52px;
+  min-height: 52px;
   max-width: 100%;
   width: 100%;
-  margin-bottom: 20px;
+  line-height: 15px;
+  white-space: nowrap;
   resize: none;
 }
 
@@ -1818,9 +1954,348 @@ main {
 
 .form__agree {
   text-align: center;
-  font-size: 13px;
-  line-height: 140%;
-  opacity: 0.5;
-  margin: 10px 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #C4C4C4;
+  text-align: left;
+  margin: 4px 0 0 0;
+}
+
+.form__send {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 56%;
+  margin-top: 72px;
+}
+
+.form__file {
+  width: 160px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+}
+.form__file label {
+  cursor: pointer;
+}
+.form__file input {
+  display: none;
+}
+.form__file span {
+  color: #ffffff;
+}
+
+.partner {
+  padding: 36px 0 70px;
+  background-color: #F7F7F7;
+}
+
+.partner__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.partner__logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 47%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 14px;
+}
+
+.partner__logo {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  max-width: 376px;
+}
+.partner__logo:first-of-type {
+  width: 50%;
+  margin-right: 9%;
+}
+.partner__logo:last-of-type {
+  width: 41%;
+}
+.partner__texts {
+  width: 50%;
+  margin-right: 3%;
+}
+
+.partner__texts-inner {
+  width: 75%;
+}
+.partner__texts-inner p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  /* or 21px */
+}
+
+.manufacturing {
+  padding: 180px 0;
+}
+.manufacturing .manufacturing__swiper {
+  height: 500px;
+}
+.manufacturing .swiper-pagination {
+  left: 10px;
+  height: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.manufacturing .swiper-pagination-bullets {
+  top: 39% !important;
+}
+.manufacturing .swiper-pagination-bullet {
+  width: 0;
+  height: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.manufacturing .swiper-pagination-bullet-active {
+  position: relative;
+  color: #00A2CE;
+  height: 60px;
+}
+.manufacturing .swiper-pagination-bullet-active:after {
+  position: absolute;
+  content: "";
+  width: 1px;
+  top: 30px;
+  left: 4px;
+  background-color: #00A2CE;
+  height: 100%;
+  z-index: 20;
+}
+.manufacturing .swiper-pagination-bullet:last-of-type:after {
+  display: none;
+}
+
+.manufacturing__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.manufacturing__image {
+  height: 500px;
+  margin-left: 7.5%;
+  width: 42.5%;
+  margin-right: 11.2%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.manufacturing__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.manufacturing__texts {
+  width: 38.7%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding: 73px 5% 73px 0;
+}
+.manufacturing__texts h2 {
+  margin-bottom: 40px;
+}
+.manufacturing__texts p {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.faq {
+  padding-top: 14px;
+  padding-bottom: 195px;
+}
+@media (max-width: 767px) {
+  .faq {
+    margin-bottom: 36px;
+  }
+}
+
+.faq__items {
+  margin-top: 90px;
+}
+@media (max-width: 767px) {
+  .faq__items {
+    margin-top: 31px;
+  }
+}
+
+.faq__item {
+  background-color: #FFFFFF;
+  cursor: pointer;
+  border-bottom: 1px solid #6C6C6C;
+  position: relative;
+  padding: 22px 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.faq__item::before {
+  position: absolute;
+  content: "";
+  width: 31px;
+  height: 1px;
+  background-color: #6c6c6c;
+  right: 33px;
+  top: 34px;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.faq__item::after {
+  position: absolute;
+  content: "";
+  width: 1px;
+  height: 31px;
+  background-color: #6c6c6c;
+  right: 48px;
+  top: 18px;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+.faq__item--active::before {
+  position: absolute;
+  background-color: #00A2CE;
+  right: 33px;
+  top: 33px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.faq__item--active::after {
+  background-color: #00A2CE;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.faq__item:first-of-type {
+  border-top: 1px solid #6C6C6C;
+}
+@media (max-width: 767px) {
+  .faq__item {
+    margin-bottom: 15px;
+  }
+}
+
+.faq__item-question {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0;
+  padding-right: 10px;
+}
+@media (max-width: 767px) {
+  .faq__item-question {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 19px;
+  }
+}
+
+.faq__item-text {
+  width: 49%;
+  padding-top: 19px;
+}
+.faq__item-text p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .faq__item-text p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 19px;
+  }
+}
+
+.faq__item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.faq__item-icon {
+  width: 66px;
+  height: 66px;
+}
+@media (max-width: 767px) {
+  .faq__item-icon {
+    width: 33.5px;
+    height: 33.5px;
+  }
+}
+
+.more {
+  background: #F7F7F7;
+  padding: 150px 0;
+}
+
+.more__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 7%;
+}
+
+.more__picture {
+  width: 45.5%;
+  margin-right: 13.5%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  height: 400px;
+}
+.more__picture img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.more__text {
+  width: 66%;
+  padding-right: 10%;
 }
 /*# sourceMappingURL=app.css.map*/
