--- a/src/sass/blocks/buttons.scss
+++ b/src/sass/blocks/buttons.scss
@@ -7,7 +7,7 @@
   border: none;
   transition: $transition-settings;
   cursor: pointer;
-
+  flex-shrink: 0;
 
   &--round {
     border-radius: 50%;
@@ -20,7 +20,7 @@
     padding: 48px 0;
 
     p {
-      display: flex;
+      display: block;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
@@ -37,13 +37,39 @@
     }
   }
 
+  &--white {
+    background-color: $color-default-white;
+
+    p {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 10px;
+      line-height: 12px;
+      height: 12px;
+      text-align: center;
+      text-transform: uppercase;
+      color: $color-black;
+      display: block;
+      margin: 0 auto;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: center;
+    }
+  }
+
+  &--more {
+    border: 1px solid $color-black;
+  }
+
   .icon {
     stroke: $color-white;
     transition: $transition-settings;
   }
 
   &:hover {
-    background: $color-light-gray;
+    background: $color-gray;
 
     p {
       color: $color-black;
