--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -22,12 +22,12 @@ $transition-settings: 0.3s all;
 
 $color-black: #2D2D2D;
 $color-light-black: #313030;
-$color-dark-gray: #6a6a6a;
+$color-dark-gray: #6A6A6A;
 $background-dark-gray: #E5E5E5;
 $color-light-gray: #F6F6F6;
 $color-white: #FFFFFF;
 $color-blue: #00A2CE;
-$color-gray: #c4c4c4;
+$color-gray: #C4C4C4;
 $color-red: #DD3232;
 
 $font-base-color: $color-black;
