--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -15,6 +15,42 @@
   justify-content: space-between;
   margin-right: 6.5%;
   padding-top: 17px;
+  flex-wrap: wrap;
+  min-width: 380px;
+
+  @media (max-width: $tablets-max) {
+    background: #e5e5e5;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.header__menu-item {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: $color-black;
+  height: fit-content;
+
+  @media (max-width: $tablets-max) {
+    a {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 900;
+      line-height: 22px;
+      letter-spacing: 0.055em;
+      text-transform: uppercase;
+      transition: $transition-settings;
+      position: relative;
+      height: 100%;
+      display: block;
+      width: 100%;
+      padding: 15px;
+      z-index: 0;
+    }
+  }
 }
 
 .header__contacts {
@@ -22,6 +58,28 @@
   justify-content: flex-end;
   display: flex;
   padding-top: 17px;
+
+  @media (max-width: 1299px) {
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: end;
+  }
+
+  @media (max-width: $tablets-max) {
+    background: #e5e5e5;
+    width: 100%;
+    align-items: flex-start;
+    padding-top: 0;
+
+    a {
+      padding: 15px;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 900;
+      line-height: 22px;
+      letter-spacing: 0.055em;
+    }
+  }
 }
 
 .header__logo-link {
@@ -34,14 +92,10 @@
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
-}
 
-.header__menu-item {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  color: $color-black;
+  @media (max-width: $tablets-max) {
+
+  }
 }
 
 .header__phone {
@@ -49,6 +103,14 @@
   font-style: normal;
   font-weight: 600;
   line-height: 17px;
+
+  @media (max-width: 1299px) {
+    margin-bottom: 16px;
+  }
+
+  @media (max-width: $tablets-max) {
+    margin-bottom: 0;
+  }
 }
 
 .header__contact-us {
@@ -59,4 +121,105 @@
   color: $color-blue;
   text-transform: uppercase;
   margin-left: 22px;
+
+  @media (max-width: $tablets-max) {
+    margin-left: 0;
+  }
+}
+
+
+.header__menu-toggle {
+  position: absolute;
+  width: 29px;
+  height: 27px;
+  display: flex;
+  background-color: $color-red;
+  align-items: center;
+  justify-content: center;
+  transition: $transition-settings;
+  right: 25px;
+  top: 30px;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 20px;
+    background-color: $color-white;
+    transform: rotate(45deg);
+    transition: $transition-settings;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 20px;
+    background-color: $color-white;
+    transform: rotate(-45deg);
+    transition: $transition-settings;
+  }
+
+  &.close {
+
+    span {
+      background-color: $color-gray;
+      width: 100%;
+      height: 2px;
+      margin-left: 1px;
+    }
+
+    @media (max-width: $tablets-max) {
+      background: transparent;
+    }
+
+    &:before {
+      height: 27px;
+      top: -6px;
+      background-color: $color-gray;
+      transform: rotate(90deg);
+    }
+
+    &:after {
+      height: 27px;
+      bottom: -6px;
+      background-color: $color-gray;
+      transform: rotate(90deg);
+    }
+  }
+
+  @media (min-width: $tablets-max) {
+    display: none;
+  }
+
+  @media (max-width: $tablets-max) {
+    display: flex;
+  }
+}
+
+.header__mobile {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+.header__mobile-wrapper {
+  height: 100vh;
+  position: fixed;
+  overflow-y: scroll;
+  top: 0;
+  width: 100%;
+}
+
+.header__overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #17171785;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
