добавляет адаптив и сжимает картинки

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -20,4 +20,5 @@
 @import "blocks/partner.scss";
 @import "blocks/manufacturing.scss";
 @import "blocks/faq.scss";
-@import "blocks/more.scss"
+@import "blocks/more.scss";
+@import "blocks/video.scss"
