--- a/src/sass/blocks/banners.scss
+++ b/src/sass/blocks/banners.scss
@@ -81,9 +81,16 @@
 }
 
 .banners__image {
+  @media (max-width: $mobiles-max) {
+    height: 300px;
+  }
+
   img {
     display: block;
     margin: 0 auto;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -109,10 +116,29 @@
   color: $color-black;
   margin: 0;
   transform: translateY(24px);
+
+  @media (max-width: $tablets-max) {
+    transform: none;
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 120%;
+    margin-top: 12px;
+  }
 }
 
 .banners__logo-image {
+  width: 617px;
+  height: 50px;
+  margin: 0 auto;
+
   @media (max-width: $mobiles-max) {
-    display: none;
+    width: 250px;
+    height: 20px;
+  }
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 }
