--- a/src/sass/blocks/manufacturing.scss
+++ b/src/sass/blocks/manufacturing.scss
@@ -1,12 +1,31 @@
 .manufacturing {
-  padding: 180px 0;
+  padding: 183px 0;
+
+  @media (max-width: $tablets-max) {
+    padding: 20px 0;
+  }
 
   .manufacturing__swiper {
     height: 500px;
+
+    @media (max-width: $mobiles-max) {
+      margin: 20px 0;
+      height: 600px;
+    }
+
+    @media (max-width: 500px) {
+      height: 650px;
+    }
+  }
+
+  .swiper-slide {
+    &-active {
+      height: 100%!important;
+    }
   }
 
   .swiper-pagination {
-    left: 10px;
+
     height: 260px;
     display: flex;
     flex-direction: column;
@@ -15,24 +34,32 @@
 
   .swiper-pagination-bullets {
     top: 39%!important;
+    left: 4px!important;
   }
 
   .swiper-pagination-bullet {
     width: 0;
     height: 0;
     transition: $transition-settings;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: right;
+    color: #9F9F9F;
 
     &-active {
       position: relative;
       color: $color-blue;
       height: 60px;
+      color: $color-blue;
 
       &:after {
         position: absolute;
         content: "";
         width: 1px;
         top: 30px;
-        left: 4px;
+        left: 8px;
         background-color: $color-blue;
         height: 100%;
         z-index: 20;
@@ -49,14 +76,43 @@
 
 .manufacturing__item {
   display: flex;
+
+  @media (max-width: 1299px) {
+    align-items: center;
+  }
+
+  @media (max-width: $mobiles-max) {
+    flex-direction: column;
+    padding-left: 35px;
+  }
 }
 
 .manufacturing__image {
-  height: 500px;
   margin-left: 7.5%;
   width: 42.5%;
   margin-right: 11.2%;
   flex-shrink: 0;
+  height: 500px;
+
+  @media(max-width: 1299px) {
+    margin-right: 3%;
+  }
+
+  @media (max-width: $tablets-max) {
+    margin-right: 5%;
+    height: 350px;
+  }
+
+  @media (max-width: $mobiles-max) {
+    margin: 0;
+    width: 100%;
+    order: 2;
+    height: 250px;
+  }
+
+  @media (max-width: 400px) {
+    height: 140px;
+  }
 
   img {
     object-fit: cover;
@@ -70,6 +126,14 @@
   flex-shrink: 0;
   padding: 73px 5% 73px 0;
 
+  @media (max-width: $tablets-max) {
+    padding: 0;
+  }
+
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+  }
+
   h2 {
     margin-bottom: 40px;
   }
@@ -79,5 +143,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
+
+    @media (max-width: $tablets-max) {
+      font-size: 12px;
+      line-height: 18px;
+    }
   }
 }
