--- a/src/sass/blocks/design.scss
+++ b/src/sass/blocks/design.scss
@@ -4,7 +4,11 @@
     height: 500px;
 
     @media (max-width: $mobiles-max) {
-      height: 650px;
+      margin: 20px 0;
+    }
+
+    @media (max-width: 500px) {
+      height: 450px;
     }
   }
 
@@ -15,7 +19,7 @@
   }
 
   .swiper-pagination {
-    left: 10px;
+
     height: 260px;
     display: flex;
     flex-direction: column;
@@ -24,24 +28,32 @@
 
   .swiper-pagination-bullets {
     top: 39%!important;
+    left: 4px!important;
   }
 
   .swiper-pagination-bullet {
     width: 0;
     height: 0;
     transition: $transition-settings;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: right;
+    color: #9F9F9F;
 
     &-active {
       position: relative;
       color: $color-blue;
       height: 60px;
+      color: $color-blue;
 
       &:after {
         position: absolute;
         content: "";
         width: 1px;
         top: 30px;
-        left: 4px;
+        left: 8px;
         background-color: $color-blue;
         height: 100%;
         z-index: 20;
@@ -61,6 +73,7 @@
 
   @media (max-width: $mobiles-max) {
     flex-direction: column;
+    padding-left: 35px;
   }
 }
 
@@ -69,12 +82,30 @@
   width: 42.5%;
   margin-right: 11.2%;
   flex-shrink: 0;
-  height: 450px;
+  height: 500px;
+
+  @media(max-width: 1299px) {
+    margin-right: 3%;
+    height: 450px;
+  }
+
+  @media (max-width: $tablets-max) {
+    margin-right: 5%;
+  }
 
   @media (max-width: $mobiles-max) {
+    height: 300px;
     margin: 0;
     width: 100%;
     order: 2;
+  }
+
+  @media (max-width: 500px) {
+    height: 150px;
+  }
+
+  @media (max-width: 400px) {
+    height: 130px;
   }
 
   img {
@@ -103,5 +134,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
+
+    @media (max-width: $tablets-max) {
+      font-size: 12px;
+      line-height: 18px;
+    }
   }
 }
