--- a/src/sass/blocks/exclusive.scss
+++ b/src/sass/blocks/exclusive.scss
@@ -1,10 +1,22 @@
 .exclusive {
   padding-top: 174px;
   padding-bottom: 201px;
+
+  @media (max-width: 1299px) {
+    padding: 50px 0;
+  }
 }
 
 .exclusive__inner {
   display: flex;
+
+  @media (max-width: 1599px) {
+    align-items: center;
+  }
+
+  @media (max-width: 1299px) {
+    flex-direction: column;
+  }
 
   h2 {
     width: 80%;
@@ -17,6 +29,11 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 21px;
+
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
 .exclusive__text {
@@ -27,12 +44,24 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 48px;
+
+  @media (max-width: $mobiles-max) {
+    flex-direction: column;
+  }
 }
 
 .exclusive__text-item {
   width: 49%;
   margin-right: 2%;
   margin-bottom: 48px;
+
+  @media (max-width: $tablets-max) {
+    margin-bottom: 20px;
+  }
+
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+  }
 
   &:nth-child(2n) {
     margin-right: 0;
@@ -45,6 +74,11 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 21px;
+
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
 .exclusive__swiper {
@@ -57,19 +91,54 @@
 .exclusive__info {
   width: 49%;
   margin-right: 2%;
+
+  @media (max-width: 1299px) {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .exclusive__picture-wrapper {
   width: 49%;
   height: 450px;
   flex-shrink: 0;
+
+  @media (max-width: 1299px) {
+    width: 70%;
+    height: auto;
+  }
+
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+  }
 }
 
 .exclusive__item-inner {
   padding-right: 80px;
+
+  @media (max-width: $mobiles-max) {
+    padding-right: 0;
+
+    .button {
+      margin: 0 auto;
+    }
+  }
 }
 
 .exclusive__image {
+  height: 450px;
+
+  @media (max-width: $tablets-max) {
+    height: 400px;
+  }
+
+  @media (max-width: $mobiles-max) {
+    height: 300px;
+  }
+
+  @media (max-width: 500px) {
+    height: 200px;
+  }
 
   img {
     object-fit: cover;
