--- a/src/sass/blocks/form.scss
+++ b/src/sass/blocks/form.scss
@@ -3,11 +3,16 @@
   min-height: 750px;
   padding: 130px 0;
 
+  @media (max-width: $tablets-max) {
+    padding: 50px 0;
+    min-height: 450px;
+  }
+
   h3 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 44px;
+    // font-style: normal;
+    // font-weight: bold;
+    // font-size: 36px;
+    // line-height: 44px;
     color: $color-default-white;
     margin: 0;
   }
@@ -15,6 +20,10 @@
 
 .form__request {
   width: 76.7%;
+
+  @media (max-width: 1299px) {
+    width: 100%;
+  }
 }
 
 .form__fields-wrapper {
@@ -47,15 +56,9 @@
   transition: $transition-settings;
   color: #f4f4f4;
 
-  &--checkbox {
-    position: static;
-    opacity: 1;
-    line-height: 120%;
-
-    span {
-      padding-left: 30px;
-      display: flex;
-    }
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
   }
 
   &--disabled {
@@ -108,6 +111,11 @@
   line-height: 21px;
   transition: $transition-settings;
   color: $color-default-white;
+
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
+  }
 
   &:hover {
     border-top: transparent;
@@ -212,6 +220,12 @@
   color: #C4C4C4;
   text-align: left;
   margin: 4px 0 0 0;
+  margin-right: 15px;
+
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
 .form__send {
@@ -219,6 +233,15 @@
   align-items: center;
   width: 56%;
   margin-top: 72px;
+
+  @media (max-width: 1299px) {
+    margin-top: 20px;
+    width: 70%;
+  }
+
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+  }
 }
 
 .form__file {
