--- a/src/sass/blocks/partner.scss
+++ b/src/sass/blocks/partner.scss
@@ -1,11 +1,19 @@
 .partner {
   padding: 36px 0 70px;
   background-color: #F7F7F7;
+
+  @media (max-width: $tablets-max) {
+    padding: 20px 0;
+  }
 }
 
 .partner__inner {
   display: flex;
   align-items: center;
+
+  @media (max-width: $tablets-max) {
+    flex-direction: column;
+  }
 }
 
 .partner__logos {
@@ -13,6 +21,15 @@
   width: 47%;
   align-items: center;
   padding-top: 14px;
+
+  @media (max-width: $tablets-max) {
+    width: 100%;
+  }
+
+  @media (max-width: $mobiles-max) {
+    flex-direction: column;
+    align-items: baseline;
+  }
 }
 
 .partner__logo {
@@ -28,6 +45,20 @@
     width: 41%;
   }
 
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+    margin-bottom: 15px;
+
+    &:first-of-type {
+      width: 100%;
+      margin-right: 0;
+    }
+
+    &:last-of-type {
+      width: 100%;
+    }
+  }
+
   img {
 
   }
@@ -36,17 +67,30 @@
 .partner__texts {
   width: 50%;
   margin-right: 3%;
+
+  @media (max-width: $tablets-max) {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .partner__texts-inner {
   width: 75%;
+
+  @media (max-width: $tablets-max) {
+    width: 100%;
+  }
 
   p {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 21px;
-    /* or 21px */
+
+    @media (max-width: $tablets-max) {
+      font-size: 12px;
+      line-height: 18px;
+    }
   }
 }
 
