--- a/src/sass/blocks/production.scss
+++ b/src/sass/blocks/production.scss
@@ -8,7 +8,7 @@
 
   @media (max-width: $tablets-max) {
     flex-direction: column;
-    padding: 20px 0 30px;
+    padding: 40px 0;
   }
 
   h2 {
@@ -33,6 +33,8 @@
     @media (max-width: $tablets-max) {
       width: 100%;
       margin: 0;
+      font-size: 12px;
+      line-height: 18px;
     }
   }
 }
@@ -43,20 +45,39 @@
   background-size: cover;
   position: relative;
   background-position: center;
+
+  @media (max-width: $tablets-max) {
+    min-height: 400px;
+  }
 }
 
 .production__inner {
   position: relative;
   min-height: 750px;
+
+  @media (max-width: $tablets-max) {
+    min-height: 400px;
+  }
 }
 
 .production__info-items {
   display: flex;
+  flex-wrap: wrap;
   position: absolute;
   justify-content: space-between;
   bottom: 45px;
   width: 100%;
   padding: 0 25px;
+
+  @media (max-width: $tablets-max) {
+    bottom: 20px;
+    padding: 0;
+  }
+
+  @media (max-width: $mobiles-max) {
+    position: initial;
+    flex-direction: column;
+  }
 }
 
 .production__info-item {
@@ -67,11 +88,21 @@
     margin-right: 0;
   }
 
+  @media (max-width: $mobiles-max) {
+    width: 100%;
+    margin-right: 0;
+  }
+
   span {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
+
+    @media (max-width: $tablets-max) {
+      font-size: 12px;
+      line-height: 18px;
+    }
   }
 }
 
@@ -85,6 +116,11 @@
     font-size: 96px;
     line-height: 117px;
     margin: 0;
+
+    @media (max-width: $tablets-max) {
+      font-size: 50px;
+      line-height: 72px;
+    }
   }
 
   b {
