--- a/src/sass/blocks/series.scss
+++ b/src/sass/blocks/series.scss
@@ -23,8 +23,15 @@
     top: 62%;
     left: 50%!important;
     transform: translate(-50%,-50%);
-
     height: 5px;
+
+    @media (max-width: 1299px) {
+      top: 70%;
+    }
+
+    @media (max-width: $tablets-max) {
+      top: 90%;
+    }
 
     &:after {
       position: absolute;
@@ -47,6 +54,31 @@
 
     &-active {
       background-color: $color-blue;
+    }
+  }
+
+  .swiper-button {
+    &-next {
+      width: 120px;
+      height: 120px;
+      background-color: transparent;
+      border-radius: 50%;
+      right: 12%;
+      top: 130px;
+
+      &:after {
+        display: none;
+      }
+    }
+
+    &-prev {
+      display: none;
+    }
+
+    &-disabled {
+      opacity: 1!important;
+      cursor: auto!important;
+      pointer-events: auto!important;
     }
   }
 }
@@ -79,6 +111,7 @@
   line-height: 24px;
   text-align: right;
   text-transform: uppercase;
+
 }
 
 .series__page-subtitle {
@@ -87,6 +120,11 @@
   font-size: 14px;
   line-height: 21px;
   margin-bottom: 35px;
+
+  @media (max-width: $tablets-max) {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
 .series__blocks {
@@ -98,6 +136,10 @@
   width: 100%;
   height: 400px;
 
+  @media (max-width: $mobiles-max) {
+    height: 300px;
+  }
+
   img {
     object-fit: cover;
     width: 100%;
@@ -106,10 +148,14 @@
 }
 
 .series__item {
-  min-height: 800px;
+  min-height: 700px;
 
   @media (max-width: $tablets-max) {
     min-height: 550px;
+  }
+
+  @media (max-width: $mobiles-max) {
+    min-height: 430px;
   }
 }
 
@@ -126,7 +172,7 @@
   }
 
   &:nth-child(3n) {
-    transform: translateY(-134px);
+    transform: translateY(-134px);    min-height: 700px;
   }
 
   @media (max-width: $tablets-max) {
@@ -151,6 +197,14 @@
   transform: translate(-50%, -50%);
   bottom: 32%;
   left: 50%;
+
+  @media (max-width: 1299px) {
+    bottom: 23%;
+  }
+
+  @media (max-width: $tablets-max) {
+    display: none;
+  }
 
   p {
     font-style: normal;
